--- a/src/index.css
+++ b/src/index.css
@@ -18,12 +18,8 @@
   font-weight: 400;
   color-scheme: light dark;
   color: rgba(9, 9, 9, 0.87) !important;
-  /* background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.4) 0%,
-      rgba(0, 0, 0, 0.4) 100%
-    ),
-    #0e0a1f !important; */
+  /* background: url("/src/assets/icons/svg/v2/bg_offical.svg") 0% 0% / cover
+    no-repeat fixed; */
   background-color: #120f22;
   /* background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%); */
   animation: gradient 15s ease infinite;
