--- a/src/assets/css/antd-override.scss
+++ b/src/assets/css/antd-override.scss
@@ -68,3 +68,27 @@ input::placeholder {
 .ant-select-selector {
   height: 51px !important;
 }
+
+.ant-breadcrumb {
+  color: #fff !important;
+}
+
+.ant-breadcrumb-separator {
+  color: #fff !important;
+}
+
+.ant-breadcrumb-link {
+  font-size: 14px;
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  color: #fff !important;
+}
+
+.ant-breadcrumb-link > span {
+  font-size: 14px;
+  display: flex;
+  gap: 4px;
+  align-items: center;
+  color: #c6c6c6 !important;
+}
