--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Exo+2&display=swap");
 @import url("./assets/css/animation.drawer.css");
 @import url("./assets//css/chart.custom.css");
-/* @import url('./assets/css/select.custom.scss'); */
 @import url("./assets/css/background-root.css");
 @import url("./assets/css/step.css");
 @import url("./assets/css/pagination.css");
@@ -131,6 +130,10 @@ input[type="number"] {
       rgba(97, 179, 255, 0.15) 100%
     ),
     #0d0e12;
+}
+
+.switch-linear {
+  background: var(--p-gc1, linear-gradient(135deg, #24c3bc 0%, #adfffb 100%));
 }
 
 .button-linear-1 {
