--- a/src/components/modals/chart-modal/style.scss
+++ b/src/components/modals/chart-modal/style.scss
@@ -24,6 +24,8 @@
   transform: translateY(80%);
   animation: slide-up 0.3s ease-out forwards;
   width: 100%;
+  max-width: 768px;
+  max-height: 853px;
   border-radius: 8px;
   // margin-left: auto;
   // margin-right: auto;
